# bili-jean

./: .dockerignore  .gitignore  .mypy.ini  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml  test_coverage.yml
bili_jean/: __init__.py  app.py  constants.py  models.py  page_download_service.py  proxy_service.py  streaming_service.py  user_service.py  utils.py  work_service.py
bili_jean/schemes/: __init__.py  streaming.py
bili_jean/schemes/proxy/: base.py  card.py  myinfo.py  pgc_play.py  pgc_view.py  pugv_play.py  pugv_view.py  ugc_play.py  ugc_view.py  view.py
bili_jean/schemes/streaming/: page.py
bili_jean/streaming/: streaming_service.py
bili_jean/streaming/components/: __init__.py  base.py  pgc.py  pugv.py  ugc.py  wrapper.py
tests/: __init__.py  utils.py
tests/data/: user_card_642389251.json  user_info_has_vip.json  video_stream_BV1X54y1C74U.json
tests/mock_data/proxy/: pgc_play_ep199612.json  pgc_view_ep1.json  pgc_view_ep815604.json  pugv_view_ss6838.json  ugc_play_BV13L4y1K7th.json  ugc_play_BV13ht2ejE1S.json  ugc_play_BV1Ys421M7YM.json  ugc_view_BV1X54y1C74U.json
tests/unittest/: test_app.py  test_constants.py  test_page_download_service.py  test_proxy_service.py  test_streaming_service.py  test_user_service.py  test_utils.py  test_work_service.py
tests/unittest/proxy_service/: test_get_card.py  test_get_my_info.py  test_get_pgc_play.py  test_get_pgc_view.py  test_get_pugv_play.py  test_get_pugv_view.py  test_get_ugc_play.py  test_get_ugc_view.py  test_get_view.py
tests/unittest/streaming/: test_streaming_service.py
(+20 files in other folders)
