[tool.poetry]
name = "bili-jean"
version = "0.0.1"
description = "Download Bilibili resources"
authors = ["Chaojie Yan <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.19.0,<9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
