[tool.poetry]
name = "bili-jean"
version = "0.0.1"
description = "Download Bilibili resources"
authors = ["Chaojie Yan <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pydantic = ">=2.6,<3"
python = ">=3.10,<4"
requests = ">=2.32,<3"

[tool.poetry.group.dev.dependencies]
autopep8 = ">=2.3,<3"
flake8 = ">=7.1,<8"
ipython = ">=8.19.0,<9"
mypy = ">=1.13,<2"

[tool.autopep8]
aggressive = 3
in-place = true
max_line_length = 120
recursive = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
